# RAG-FastAPI

./: README.md  pyproject.toml
MRM_toolkit/: main.py
MRM_toolkit/KG/: knowledge_graph.json  knowledge_graph_cossim_rel.json
MRM_toolkit/src/: KG_builder.py
MRM_toolkit/utils/: KG_builder.py  loader.py  nlp.py
app/: main.py
app/api/: api.py
app/api/endpoints/: chat.py  home.py
app/model/: chat_response.py
app/services/rag_chat_service/src/: base_service.py  bootstrap.py  chat_service.py
app/services/rag_chat_service/src/components/: autorater.py  chunker.py  embedder.py  generator.py  loader.py  reranker.py  retriever.py  runner.py
app/services/rag_chat_service/src/pipeline/: embedding_pipeline_config.yaml  inference_pipeline_config.yaml
app/services/rag_chat_service/src/utils/: chainer.py  langsmith_loader.py  mlflow_loader.py  sql_connection.py  syncify.py  validation.py  wikipedia_api_call.py
